...
        child: IntroductionScreen(
          color: Palette.primaryColor,
          globalFooter: SizedBox(
            width: double.infinity,
            height: 60,
            child: ElevatedButton(
              key: const Key('onBoardSkip'),
              onPressed: _onIntroEnd,
              child: const Text(
                'Lets go right away!',
                style: TextStyle(fontSize: 16, fontWeight: FontWeight.bold),
              ),
            ),
...
